# brain2text-

./: .gitignore  README.md  config.py  main.py  pyproject.toml  train.py  training.py
configs/: base.yaml
data/: dataloader.py  dataset.py  prepare_dataset.py  read_dataset.py  utils.py
model/: model.py
notebooks/: some-eda-brain-to-text-25.ipynb
train_configs/: base.yaml
